--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,7 +49,7 @@
             <input type="mail">
             <label for="">Comentarios</label>
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <input type="submit">
+            <button><input type="submit"></button>
             <input type="reset" value="Borrar formulario">
         </form>
     </fieldset>
@@ -82,21 +82,24 @@
         <div class="row pie">
             <div class="col-md-3 col-lg-4 sub-pie">
                 <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p class="text-dark"><b>Edicion especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
+                <p class="text-white"><b>Edición especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
                 <img src="../imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
-                    <p class="text-dark"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
+                    <p class="text-white"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
                     <p class="text-white text-center">© Copyright - All rights reserved 2022</p>
             </div>
             <div class="col-md-3 col-lg-4 sub-pie">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-                <p class="text-dark"><b>Entrada y salida a la Ciudad desde el Mirador</b></p> 
+                <p class="text-white"><b>Entrada y salida a la Ciudad desde el Mirador</b></p> 
             </div>
         </div>
     </footer>
     <a href="../index.html" class="ini btn-inicio">
         <i class="fa-solid fa-house-chimney"></i>
+    </a>
+    <a href="#" class="subir">
+        <i class="fa-solid fa-angles-up"></i>
     </a>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
