--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active fotoCarrusel" >
-                    <img src="imagenes/orla1.png" alt="" width="49.8%" height="300px">
-                    <img src="imagenes/orla1.1.jpg" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/Edith.png" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/Noti-6.png" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
                     <img src="imagenes/orla2.jpg" alt="" width="49.8%" height="300px">
                     <img src="imagenes/orla2.1.png" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
-                    <img src="imagenes/orla3.jpg" alt="" width="49.8%%" height="300px">
-                    <img src="imagenes/orla3.1.jpg" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla4.jpg" alt="" width="49.8%%" height="300px">
+                    <img src="imagenes/orla4.1.jpg" alt="" width="49.8%" height="300px">
                 </div>
                 <div class="carousel-item fotoCarrusel">
-                    <img src="imagenes/orla4.jpg" alt="" width="49.8%" height="300px">
-                    <img src="imagenes/orla4.1.jpg" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla1.png" alt="" width="49.8%" height="300px">
+                    <img src="imagenes/orla1.1.jpg" alt="" width="49.8%" height="300px">
                 </div>
             </div>
         
@@ -103,17 +103,17 @@
     <footer class="container-fluid"> <!-- Pie de Pagina -->
         <div class="row pie">
             <div class="col-xs-12 col-md-3 col-lg-4">
-                <iframe width="640" height="60%" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="640" height="255%" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="text-white"><b>Edición especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
-                <img src="imagenes/TobaLogo.png" class="fotoPie" width="100%" height="60%" alt="">
+                <img src="imagenes/TobaLogo.png" class="fotoPie" width="100%"  alt="">
                     <p class="text-white"><b>Veni a conocer Tobati. Artesanias milenarias y aventuras te esperan</b></p>
                     <p class="text-white text-center">© Copyright - All rights reserved 2022</p>
                 
             </div>
             <div class="col-xs-12 col-md-3 col-lg-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="60%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
                 <p class="text-white"><b>Entrada y salida a la Ciudad desde el Mirador</b></p>
             </div>   
         </div>
