--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -69,6 +69,12 @@
         <div class="foto9">
             <img src="../imagenes/imag11.png" alt="" class="img-foto">
         </div>
+        <div class="foto10">
+            <img src="../imagenes/imag12.png" alt="" class="img-foto">
+        </div>
+        <div class="foto11">
+            <img src="../imagenes/imag13.png" alt="" class="img-foto">
+        </div>
     </div>
 
     <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
