Modificación de Contacto y se agregó Quien Soy

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
     <fieldset class="container">
-        <legend>Complete sus datos</legend>
+        <legend>Aquí podes dejarnos tu consulta, no dudes en contactarnos!</legend>
         <form action="enviar.php" method="post" enctype="text/plain">
             <label for="nombre1">Nombre</label>
             <input type="text" placeholder="ingrese nombre">
@@ -49,8 +49,12 @@
             <input type="mail">
             <label for="">Comentarios</label>
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button><input type="submit"></button>
-            <input type="reset" value="Borrar formulario">
+            <button>
+                <input type="submit">
+            </button>
+            <button>
+                <input type="reset" value="Borrar formulario">
+            </button>
         </form>
     </fieldset>
 
