--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li data-target="#demo" data-slide-to="3"></li>
             </ul>
             <!-- The slideshow -->
-            <div class="carousel-inner">
+            <div class="carousel-inner carruseles">
                 <div class="carousel-item active fotoCarrusel" >
                     <img src="imagenes/Edith.png" alt="" width="49.8%" height="300px">
                     <img src="imagenes/Noti-6.png" alt="" width="49.8%" height="300px">
@@ -99,11 +99,21 @@
             </a>
         </div>
     </div>
+    <div class=" container nosotros col-lg-9"> <!-- Quien soy -->
+        <div class="row">
+            <div class="izquierda col-xs-12 col-md-6 col-lg-6"></div>
+            <div class="derecha col-xs-12 col-md-6 col-lg-6">
+                <h3>Quién soy</h3>
+                <p>Informático pero primeramente tobateño. Vivo en Argentina hace 17 años y desde este lugar espero mostrar todo lo que tiene esta ciudad para ofrecer, por ende, el propósito de esta página es mostrar todo lo que yo veo cada vez que vuelvo a esta hermosa ciudad del Paraguay, en la cuál me crié, y disfuten de lo que yo disfruto cuando la visiten.
+                </p>
+            </div> 
+        </div>
+    </div>
 
     <footer class="container-fluid"> <!-- Pie de Pagina -->
         <div class="row pie">
             <div class="col-xs-12 col-md-3 col-lg-4">
-                <iframe width="640" height="255%" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="text-white"><b>Edición especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
@@ -113,7 +123,7 @@
                 
             </div>
             <div class="col-xs-12 col-md-3 col-lg-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28865.17573173796!2d-57.10481965352962!3d-25.26564110698348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd2137cb199c1%3A0xabbb57218db2b011!2sTobat%C3%AD%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1650403296184!5m2!1ses!2sar" width="540" height="255" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
                 <p class="text-white"><b>Entrada y salida a la Ciudad desde el Mirador</b></p>
             </div>   
         </div>
