--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -118,7 +118,7 @@
             <div class="col-md-3 col-lg-4">
                 <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
-                <p class="text-white"><b>Edición especial del programa Mba´éichapa, esperamos una pronta visita nuevamente</b></p>
+                <p class="text-white"><b>Edición especial del programa Mba´éichapa, conocé nuestra historia!</b></p>
             </div>
             <div class="col-md-3 col-lg-4">
                 <img src="../imagenes/TobaLogo.png" class="fotoPie" width="100%" alt="">
