Actualizacion de boton WP

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="enlaces">
                 <a href="pages/servicios.html"><i class="fa-solid fa-bell-concierge"></i>Servicios</a>
-                <a href="/pages/galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
+                <a href="pages/galeria.html"><i class="fa-solid fa-images"></i>Galeria</a>
                 <a href="pages/noticias.html"><i class="fa-solid fa-circle-info"></i>Noticias</a>     
                 <a href="pages/contacto.html"><i class="fa-solid fa-id-card"></i>Contacto</a>
             </div>    
@@ -41,7 +41,7 @@
     <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
         <ul>
             <li>
-                <a href="">
+                <a href="https://api.whatsapp.com/send?phone=5492914711195" target="_blank" onclick="ga('send', 'event', 'Whatsapp', 'Home', '', 1)">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </li>
@@ -62,7 +62,7 @@
             </li>
         </ul>
     </div>
-    <div class="container conte-carru col-sd-8 col-md-10 col-lg-9" data-aos="fade-left">
+    <div class="container conte-carru col-sm-8 col-md-10 col-lg-9" data-aos="">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
@@ -105,13 +105,13 @@
             <div class="izquierda col-xs-12 col-md-6 col-lg-6"></div>
             <div class="derecha col-xs-12 col-md-6 col-lg-6">
                 <h3>Quién soy</h3>
-                <p>Informático pero primeramente tobateño. Vivo en Argentina hace 17 años y desde este lugar espero mostrar todo lo que tiene esta ciudad para ofrecer, por ende, el propósito de esta página es mostrar todo lo que yo veo cada vez que vuelvo a esta hermosa ciudad del Paraguay, en la cuál me crié, y disfuten de lo que yo disfruto cuando la visiten.
+                <p>Informático pero primeramente tobateño. Vivo en Argentina hace 17 años y desde este lugar espero difundir todo lo que tiene esta ciudad para ofrecer, por ende, el propósito de esta página es mostrar todo lo que yo veo cada vez que vuelvo a esta hermosa ciudad del Paraguay, en la cuál me crié, y disfuten de lo que yo disfruto cuando la visiten.
                 </p>
             </div> 
         </div>
     </div>
 
-    <footer class="container-fluid" data-aos="fade-up"> <!-- Pie de Pagina -->
+    <footer class="container-fluid" data-aos=""> <!-- Pie de Pagina -->
         <div class="row pie">
             <div class="col-xs-12 col-md-3 col-lg-4">
                 <iframe width="640" height="255" src="https://www.youtube.com/embed/Pi0Ut34CVnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
