--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -100,7 +100,7 @@
     <div class="social-media"> <!-- REDES SOCIALES PANEL LATERAL IZQUIERDO -->
         <ul>
             <li>
-                <a href="">
+                <a href="https://api.whatsapp.com/send?phone=5492914711195" target="_blank" onclick="ga('send', 'event', 'Whatsapp', 'Home', '', 1)">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
             </li>
